# ai-devsecops-command-center

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_DESCRIPTION.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package.json  pnpm-workspace.yaml  tsconfig.base.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  codeql.yml  labeler.yml  release.yml  sbom.yml  scorecard.yml  security-issue.yml  security.yml
agents/core/: README.md
agents/roles/: README.md
agents/roles/security/dependency-intel/: Dockerfile  README.md  pyproject.toml
agents/roles/security/dependency-intel/src/dependency_intel/: __init__.py  __main__.py  builder.py  config.py  correlator.py  risk.py  store.py  telemetry.py
agents/roles/security/dependency-intel/src/dependency_intel/api/: __init__.py  app.py
agents/roles/security/dependency-intel/src/dependency_intel/models/: __init__.py  dto.py  graph.py
agents/roles/security/dependency-intel/tests/: __init__.py  conftest.py  test_api.py  test_builder.py  test_correlator.py  test_risk.py
agents/roles/security/sbom-generator/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
agents/roles/security/sbom-generator/.github/workflows/: ci.yml
agents/roles/security/sbom-generator/deploy/: kubernetes.yaml  prometheus-rules.yaml
agents/roles/security/sbom-generator/docs/: ARCHITECTURE.md  RUNBOOK.md  TESTING.md  openapi.yaml
agents/roles/security/sbom-generator/examples/: requests.sh
agents/roles/security/sbom-generator/scripts/: build.sh  generate.sh  run-local.sh
agents/roles/security/sbom-generator/src/sbom_generator/: __init__.py  __main__.py  agent.py  config.py  errors.py  metrics.py  output.py  service.py  syft.py  telemetry.py
agents/roles/security/sbom-generator/src/sbom_generator/models/: __init__.py  request.py  response.py  sbom.py
agents/roles/security/sbom-generator/src/sbom_generator/security/: ssrf.py
agents/roles/security/sbom-generator/tests/: conftest.py  test_agent_and_syft.py  test_integration_live.py  test_output.py  test_request_model.py  test_sbom_model.py  test_service.py  test_ssrf.py  test_telemetry.py
agents/roles/security/sbom-generator/tests/fixtures/: sample-cyclonedx.json  sample-spdx.spdx  sample-syft.json
agents/roles/security/sbom-generator/tools/: rotate-syft-digest.sh
agents/roles/security/vuln-intel/: Dockerfile  README.md  pyproject.toml
agents/roles/security/vuln-intel/src/vuln_intel/: __init__.py  __main__.py  audit.py  cache.py  config.py  consensus.py  llm.py  matcher.py  scoring.py  store.py  telemetry.py  validators.py
agents/roles/security/vuln-intel/src/vuln_intel/api/: __init__.py  app.py
agents/roles/security/vuln-intel/src/vuln_intel/models/: __init__.py  cve.py  dto.py
agents/roles/security/vuln-intel/src/vuln_intel/sources/: __init__.py  base.py  enrichment.py  ghsa.py  nvd.py  osv.py
agents/roles/security/vuln-intel/tests/: __init__.py  conftest.py  test_api.py  test_audit.py  test_cache.py  test_consensus.py  test_llm.py  test_matcher.py  test_models.py  test_sources.py  test_store.py  test_validators.py
agents/skills/: README.md
backend/: .env.example  .eslintrc.json  .gitignore  README.md  package.json  tsconfig.base.json  tsconfig.json
backend/scripts/: gen-jwt-secret.sh  smoke.ts
docs/adr/: 0001-event-bus-transport.md  0001-record-architecture-decisions.md  0002-agent-to-agent-communication.md  0002-monorepo-pnpm.md  0003-event-schema-format.md  0004-six-services-one-database.md  0005-record-architecture-decisions.md  0006-monorepo-pnpm.md  0007-docker-compose-dev.md  0008-shared-sub-paths.md  0009-docker-compose-dev.md  README.md
docs/agents/: README.md
docs/architecture/: README.md  agent-topology.md  authentication-and-security-design.md  event-bus.md  github-integration.md  s2-security-mitigations.md  (+3 more)
docs/drafts/sbom-pipeline-service-v2/sbom-pipeline-service/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
docs/drafts/sbom-pipeline-service-v2/sbom-pipeline-service/src/sbom_pipeline/: __init__.py  __main__.py  analyzer.py  api.py  bus.py  cli.py  config.py  errors.py  main.py  models.py  parsers.py  store.py  syft_wrapper.py  telemetry.py
docs/drafts/sbom-pipeline-service-v2/sbom-pipeline-service/tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_parsers.py  test_syft_wrapper.py
docs/drafts/sbom-pipeline-service-v2/sbom-pipeline-service/tests/fixtures/: sample-cyclonedx.json  sample-spdx.spdx  sample-syft.json
frontend/: .gitignore  FRONTEND.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
infra/: README.md
memory/: MEMORY.md  decision-pnpm-turborepo.md  event-bus-design.md  feedback-coordination.md  feedback-team-filesystem-isolation.md  gitops-manager-sprint-1.md  monitoring-architecture.md  observability-layout.md  project-conventions.md  project-sprint2-vulnerability-intelligence.md  project.md  s2-5-sbom-wire-format-drift-fix.md  s2-8-sbom-generator-hardening-hotfix.md  s2-closeout-summary.md  s2-gitops-wire-format-alignment.md  s2-runtime-observability.md  s2-sbom-pipeline-v1-hotfix.md  s2-sbom-pipeline-v2-completion.md  s2-sbom-v2-spec-alignment.md  s2-scan-topic-and-assetid.md  s2-security-service-metrics-wired.md  s2-security-service-metrics.md  s2-shared-metrics-helper.md  s2-vuln-schema-handoff.md  s3-backlog-state.md  spec-vs-review-drift-pattern.md  sprint-1-status.md  sprint-1-task-board.md  sprint-2-closeout.md  sprint-2-coordination.md  sprint-2-task-board.md  system-architecture-definition.md
scripts/: README.md  examples.sh  smoke_boot_services.py  smoke_e2e_security.py  smoke_vuln_intel.py  verify_compile.py
security/: README.md
(+329 files in other folders)
