[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-generator"
version = "1.0.0"
description = "Syft-wrapped SBOM generation service for the AionRs security platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "AionRs Security Team", email = "security@aionrs.io" },
]
keywords = ["sbom", "syft", "cyclonedx", "spdx", "security", "devsecops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "nats-py>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "freezegun>=1.4.0",
]
runtime = [
    "prometheus-client>=0.20.0",
]

[project.scripts]
sbom-generator = "sbom_generator.__main__:main"

[project.urls]
Homepage = "https://aionrs.io/sbom-generator"
Documentation = "https://aionrs.io/docs/sbom-generator"
Repository = "https://github.com/aionrs/sbom-generator"
Issues = "https://github.com/aionrs/sbom-generator/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sbom_generator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "N", "C4", "S", "RUF",
]
ignore = [
    "S101",  # asserts in tests
    "E501",  # long lines (we keep them readable manually)
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/sbom_generator"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
